Commit these modifications

--- a/index.html
+++ b/index.html
@@ -167,35 +167,35 @@
 
         </ul>
 
-        <ul>
-            <p>Get to Know Us</p>
-            <a>Careers</a>
-            <a>Blog</a>
-            <a>About Amazon</a>
-            <a>Investor Relations</a>
-            <a>Amazon Devices</a>
-            <a>Amazon Science</a>
+         <ul>
+            <p>Make Money with Us</p>
+            <a>Sell products on Amazon</a>
+            <a>Sell on Amazon Business</a>
+            <a>Sell apps on Amazon</a>
+            <a>Become an Affiliate</a>
+            <a>Self-Publish with Us</a>
+            <a>›See More Make Money with Us</a>
 
         </ul>
 
         <ul>
-            <p>Get to Know Us</p>
-            <a>Careers</a>
-            <a>Blog</a>
+            <p>Amazon Payment Products</p>
+            <a>Amazon Business Card</a>
+            <a>Shop with Points</a>
             <a>About Amazon</a>
-            <a>Investor Relations</a>
-            <a>Amazon Devices</a>
-            <a>Amazon Science</a>
+            <a>Reload Your Balance</a>
+            <a>Amazon Currency Converter</a>
+         
 
         </ul>
 
         <ul>
-            <p>Get to Know Us</p>
-            <a>Careers</a>
+            <p>Let Us Help You</p>
+            <a>Amazon and COVID-19</a>
             <a>Blog</a>
-            <a>About Amazon</a>
-            <a>Investor Relations</a>
-            <a>Amazon Devices</a>
+            <a>Your Account</a>
+            <a>Shipping Rates & Policies</a>
+            <a>Manage Your Content and Devices</a>
             <a>Amazon Science</a>
 
         </ul>
