Add the changes

--- a/index.html
+++ b/index.html
@@ -196,7 +196,8 @@
             <a>Your Account</a>
             <a>Shipping Rates & Policies</a>
             <a>Manage Your Content and Devices</a>
-            <a>Amazon Science</a>
+            <a>Amazon Science and knowledge</a>
+            <a>Amazon schemes</a>
 
         </ul>
     </div>
