--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
             <a>Shipping Rates & Policies</a>
             <a>Manage Your Content and Devices</a>
             <a>Amazon Science</a>
+            <a>Amazon investments</a>
 
         </ul>
     </div>
